--- a/src/assets/styles/feed/feed.scss
+++ b/src/assets/styles/feed/feed.scss
@@ -13,5 +13,38 @@
   border-radius: 4px;
 
   //   height: 500px;
-  max-height: 80vh;
+
+  height: 80vh;
+}
+
+.feed-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  * {
+    border-radius: 4px;
+  }
+
+  input {
+    outline: none;
+    border: none;
+    padding: 4px;
+  }
+
+  input:focus {
+    outline: 2px solid #2596be;
+  }
+
+  button {
+    background-color: #2596be;
+  }
+
+  button:hover {
+    background-color: #207fa1;
+  }
+
+  button:active {
+    background-color: #175a72;
+  }
 }
